# closure

./: AUTHORS.md  CITATION.cff  CONCEPT.md  CONTRIBUTING.md  HYPOTHESES.md  LICENSE  LOG.md  METHODOLOGY.md  OBJECTIONS.md  README.md  STATUS.md  VERIFICATION.md
background/: closure-vs-dbc.md  formal-core.md  methodology-provenance.md  prior-art.md  reduction-history.md
decisions/: 0001-generation-and-sampling.md  0002-grounding-measurement.md  0003-rigidity-measurement.md  0004-ambiguity-measurement.md  0005-factor-analysis.md  0006-reproducibility-and-freeze.md  0007-e5-reclosure.md  0008-e8-instruction-breakpoint.md  README.md
experiments/: README.md
experiments/E0-closure-existence/: PLAN.md  README.md
experiments/E1-premature-closure/: README.md
experiments/E2-conserved-quantities/: README.md
experiments/E3-future-volume/: CORPUS.md  FEASIBILITY.md  (+9 more)
experiments/E3-future-volume/pilot/: .gitignore  README.md  analyze_pilot.py  pyproject.toml  run_pilot.py
experiments/E3-future-volume/pilot/results/: prompt_00.json  prompt_00.npz  prompt_01.json  prompt_01.npz  prompt_02.json  prompt_02.npz  prompt_03.json  prompt_03.npz  prompt_04.json  prompt_04.npz  prompt_05.json  prompt_05.npz  prompt_06.json  prompt_06.npz  prompt_07.json  prompt_07.npz  prompt_08.json  prompt_08.npz  prompt_09.json  prompt_09.npz  prompt_10.json  prompt_10.npz  prompt_11.json  prompt_11.npz  prompt_12.json  prompt_12.npz  prompt_13.json  prompt_13.npz  prompt_14.json  prompt_14.npz  prompt_15.json  prompt_15.npz  prompt_16.json  prompt_16.npz  prompt_17.json  prompt_17.npz  prompt_18.json  prompt_18.npz  prompt_19.json  prompt_19.npz  (+22 more)
experiments/E3-future-volume/rehearsal/: README.md  analyze_rehearsal.py  disjointness.py  normalizer.py  pyproject.toml  run_rehearsal.py
experiments/E3-future-volume/rehearsal/results/: analysis.json  disjointness.json  prompt_00.json  prompt_00.npz  prompt_01.json  prompt_01.npz  prompt_02.json  prompt_02.npz  prompt_03.json  prompt_03.npz  prompt_04.json  prompt_04.npz  prompt_05.json  prompt_05.npz  prompt_06.json  prompt_06.npz  prompt_07.json  prompt_07.npz  prompt_08.json  prompt_08.npz  prompt_09.json  prompt_09.npz  prompt_10.json  prompt_10.npz  prompt_11.json  prompt_11.npz  prompt_12.json  prompt_12.npz  prompt_13.json  prompt_13.npz  prompt_14.json  prompt_14.npz  prompt_15.json  prompt_15.npz  prompt_16.json  prompt_16.npz  prompt_17.json  prompt_17.npz  prompt_18.json  prompt_18.npz  (+45 more)
experiments/E3-future-volume/run/: .gitignore  README.md  VERDICT.md  analyze_experiment.py  pyproject.toml  run_experiment.py
experiments/E3-future-volume/validation/: .gitignore  README.md  pyproject.toml
experiments/E3-future-volume/validation/src/e3_validation/: __init__.py  compare.py  correctness.py  fidelity.py  freeze.py  loader.py  ood.py  preconditions.py  probe.py  splits.py  verdict.py  volume.py
experiments/E3-future-volume/validation/tests/: _fixtures.py  test_compare.py  test_correctness.py  test_determinism.py  test_fidelity.py  test_freeze.py  test_loader.py  test_ood.py  test_ood_shortcut.py  test_preconditions.py  test_probe_binary_only.py  test_probe_nosignal.py  test_probe_signal.py  test_splits.py  test_verdict.py  test_volume.py
harness/: README.md  config.sha256  pyproject.toml
harness/scripts/: check_config_freeze.py
harness/src/closure_harness/: __init__.py  config.py  contraction.py  detector.py  generate.py  grounding.py  nli.py  outcomes.py  pilot.py  providers.py  run_e5.py  schema.py  stats.py
harness/tests/: README.md  conftest.py  test_config_freeze.py  test_contraction.py  test_detector.py  test_generate.py  test_import_hygiene.py  test_nli_integration.py  test_outcomes.py  test_pilot.py  test_run_e5.py  test_stats.py  test_stats_additions.py
publication-prep/: OWNER-CHECKLIST.md
results/: README.md
(+1511 files in other folders)
