[project]
name = "e3-validation"
version = "0.1.0"
description = "E3 synthetic validation: the analysis pipeline and verdict-branch logic proven on planted, throwaway fixtures whose right answer is known by construction, before any real corpus exists."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/e3_validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
